<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionActivity">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/access_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/permission_one"
        android:padding="5dp"
        android:textSize="18sp"
        android:text="@string/permission_one"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/permission_two"
        android:padding="5dp"
        android:textSize="18sp"
        android:text="@string/permission_two"
        android:layout_below="@+id/permission_one"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/next"
        android:padding="5dp"
        android:textSize="18sp"
        android:text="Cấp quyền rồi mới được bấm"
        android:layout_below="@+id/permission_two"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>