<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#efefef"
        android:padding="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:background="@drawable/gradient"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:onClick="Language">
            <ImageView
                android:id="@+id/app_icon"
                android:layout_marginStart="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_language"/>
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/app_name"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/language"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#efefef"
        android:padding="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:background="@drawable/gradient"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:onClick="Share">
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_share"/>
            <TextView
                android:gravity="center_vertical"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:text="@string/share"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#efefef"
        android:padding="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:background="@drawable/gradient"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:onClick="Rate">
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_iconstar"/>

            <TextView
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#efefef"
        android:padding="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:background="@drawable/gradient"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:onClick="Policy"
            >
            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_terms"/>
            <TextView
                android:gravity="center_vertical"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:text="@string/terms"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hint"
        android:textSize="17dp"
        android:text="@string/version"/>

</LinearLayout>