<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/bg_splash_screen"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Chose language"
            android:textColor="@color/white"
            android:textSize="24sp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical">
        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:visibility="visible"
            android:src="@drawable/ic_next_white" />
        <ImageView
            android:id="@+id/ivTick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:padding="10dp"
            android:src="@drawable/ic_tick" />
    </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/vietnam">

            <LinearLayout
                android:id="@+id/choseVietnam"
                android:layout_width="400dp"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:visibility="invisible"
                android:background="@drawable/btn_chose_language"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/vietnam_flag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/language_VietNam"
                    android:textColor="@color/white"
                    android:textSize="24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nochoseVietnam"
                android:layout_width="400dp"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_language"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/vietnam_flag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/language_VietNam"
                    android:textColor="@color/white"
                    android:textSize="24dp" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/english">
            <LinearLayout
                android:id="@+id/choseEnglish"
                android:layout_width="400dp"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:visibility="invisible"
                android:background="@drawable/btn_chose_language"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/england_flag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/language_English"
                    android:textColor="@color/white"
                    android:textSize="24dp" />
            </LinearLayout>
        <LinearLayout
            android:id="@+id/nochoseEnglish"
            android:layout_gravity="center"
            android:layout_width="400dp"
            android:layout_height="65dp"
            android:visibility="visible"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_language"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/england_flag"/>
            <TextView
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:text="@string/language_English"/>
        </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textvn"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                android:text="@string/chose_language_vgone"
                android:textColor="@color/white"
                android:textSize="27dp" />

            <TextView
                android:id="@+id/texten"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/chose_language"
                android:textColor="@color/white"
                android:textSize="27dp"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>